Fix sidebar flicker when a page loads

--- a/src/renderer/assets/style.css
+++ b/src/renderer/assets/style.css
@@ -119,6 +119,7 @@ main {
 .preload *::after,
 .preload *::before {
     transition: none !important;
+    visibility: hidden !important;
 }
 
 .titlebar {
